Added templates and js file
Signed-off-by: SeungYunLee <sokon954@naver.com>

--- a/Potato/templates/Potato/post_create.html
+++ b/Potato/templates/Potato/post_create.html
@@ -2,7 +2,7 @@
     <head>
         <title>게시물 작성</title>
         {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'board2/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'Potato/style.css' %}">
     </head>
     <body>
         <h1>This is a writing page</h1>
