--- a/Potato/templates/Potato/post_detail.html
+++ b/Potato/templates/Potato/post_detail.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'Potato/style.css' %}">
 <h1>{{object.title}}</h1>
 <div>Writer: {{object.writer}}</div>
 <div>Published: {{object.pub_date}}</div>
