--- a/Potato/templates/Potato/post_delete.html
+++ b/Potato/templates/Potato/post_delete.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'Potato/style.css' %}">
 <form action = '.' method = 'POST'>
     {% csrf_token %}
     <h1>{{ object.title }} 을 삭제합니다.</h1>
