--- a/Potato/templates/Potato/post_list.html
+++ b/Potato/templates/Potato/post_list.html
@@ -1,10 +1,14 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'board2/style.css' %}">
-<html>
+<link rel="stylesheet" type="text/css" href="{% static 'Potato/style.css' %}">
+<html> 
 <head>
-    <title>게시판</title>
+    <title>게시판 </title>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.5"></script>
 </head>
 <body>
+    <h1 id="app">[[title]]</h1>
         {% if post_list %}
         <table>
             <thead>
@@ -38,5 +42,6 @@
         <p>No posting available</p>
     {% endif %}
     <button class="fixed"><a href="{% url 'board2:postCreate' %}">작성</a></button>
+    <script src="{% static 'Potato/app.js' %}"></script>
 </body>
 </html>
